# ANDOR18

./: README.md
Portfolio/College/Analysis of Algorithms (C++)/: Assign1-Andor,DeHart,Stewart.docx  Assign3 - Andor, Dehart, Stewart.docx  Assign6_Andor,DeHart,Stewart.docx  Assign7-Andor,DeHart,Stewart.docx
Portfolio/College/Analysis of Algorithms (C++)/Assignment4_CSC360/: graph.h  (+6 more)
Portfolio/College/FORTRAN/: G4P1.f  G4P2.f  G4P3.f  G4P4.f  G4P5.f  G4P6.f90  G4P7.f90
Portfolio/College/Language Translations (C)/: FileOpenG3tasklist.docx  Makefile.win  Parser.c  Parser.h  ParserG3tasklist.docx  action.c  action.h  file_util.c  file_util.h  input.bak  input.lis  input.txt  main.c  main.dev  main.layout  scanner.c  scanner.h  scooby.bak  scooby.c  scooby.lis  scooby.out  scooby.txt
Portfolio/College/Programming 1 (C)/: C Assignment #1.docx  C Assignment3.docx
Portfolio/College/Python/: AndorKeffelStewartRobinsonAssign7.py  AndorKeffel_Stewart_Assign8.py  Assign4.py  Assign5.docx  Assign6.py  Assign7.py  ClassAsmt2.txt  PythonA1_Andor,Keffel,Stewart.docx  prog1.py
Portfolio/College/Senior Project (Unity+C#)/: ProjectRequirement.docx  Team Project Proposal.docx  VulcanSpire_DesignDoc_Final.docx  VulcansSpire_SpecificationDoc_Final.docx  readme
Portfolio/High School and CTC/CTC portfolio/: CommonOSfunctionscomparisonsheet.docx-kscutaru.docx  CssMiniNewer-kscutaru.html
Portfolio/Personal Projects/Discord Bots/: readme.txt
Portfolio/Personal Projects/Discord Bots/Liguini/: help.txt  main.py  package-lock.json  pyproject.toml
Portfolio/pbrboxenabler/: README.txt
(+209 files in other folders)
